Bug 1346166 - Set isHandlingUserInput = true when dispatching pointerdown and pointerup. r=smaug